dtc-xen (0.4.0-1) unstable; urgency=low

  * New upstream release.

 -- Thomas Goirand <thomas@goirand.fr>  Sun, 13 Jul 2008 23:59:04 +0800

dtc-xen (0.3.19-1) unstable; urgency=low

  * New upstream release.
  * Updated Galician debconf template translation thanks to Jacobo Tarrio
    <jacobo@tarrio.org> (Closes: #480988)
  * Updated Portuguese debconf template translation thanks to Ricardo Silva
    <ardoric@gmail.com> (Closes: #488583)
  * Added needed dependency to python-sqlite (needed to setup CentOS VPSes)

 -- Thomas Goirand <thomas@goirand.fr>  Thu, 15 May 2008 14:21:49 +0800

dtc-xen (0.3.18-1) unstable; urgency=low

  * Added debconf german translation thanks to Helge Kreutzmann
    <debian@helgefjell.de> (Closes: #471520)
  * Updated the english debconf template (Closes: #421743).
  * Removed the pushd/popd bashism in the dtc_reinstall_os.sh script
    (Closes: #473513)

 -- Thomas Goirand <thomas@goirand.fr>  Wed, 19 Mar 2008 22:34:15 +0800

dtc-xen (0.3.17-1) unstable; urgency=low

  * New upstream release correcting a path problem in the SOAP daemon (/xen
    instead of the configured path (default to /var/lib/dtc-xen/mnt)).

 -- Thomas Goirand <thomas@goirand.fr>  Fri, 14 Mar 2008 16:41:54 +0800

dtc-xen (0.3.16-1) unstable; urgency=low

  * New upstream release.
  * Updated German debconf template thanks to Helge Kreutzmann
    <debian@helgefjell.de> (Closes: #468045)
  * Updated watch file using our orig.tar.gz in GPLHost's Debian source
    repository (now it's running ok and detecting the correct version)
  * This version uses yum to setup the CentOS VMs, so rpmstrap Suggests is not
    needed any more (Closes: #468428), and instead yum is in the Depends:
  * English Debconf template reviewed (Closes: #468047)
  * Updated the nl.po Duch template thanks to "cobaco (aka Bart Cornelis)"
    <cobaco@skolelinux.no> (Closes: #468302)
  * Updated the de.po German template thanks to Helge Kreutzmann
    <debian@helgefjell.de> (Closes: #468045)