@@ -2,19 +2,16 @@ Source: dtc-xen
 Section: web
 Priority: extra
 Maintainer: Thomas Goirand <thomas@goirand.fr>
-Build-Depends: debhelper (>= 5)
-Build-Depends-Indep: po-debconf
-Standards-Version: 3.7.3
+Build-Depends: debhelper (>= 5), po-debconf
+Standards-Version: 3.8.1
 Dm-Upload-Allowed: yes
 Vcs-Browser: http://git.gplhost.com/gitweb/?p=dtc-xen.git
 Vcs-Git: http://git.gplhost.com/dtc-xen.git
 Homepage: http://www.gplhost.com/software-dtc-xen.html
 
 Package: dtc-xen
-Section: web
-Priority: optional
 Architecture: all
-Depends: apache2-utils, debconf, python, rrdtool, python-soappy, python-crypto, python-sqlite, m2crypto, debootstrap, openssl, sudo, adduser, sysstat, lsb-base, yum
+Depends: ${misc:Depends}, apache2-utils, debconf, python, rrdtool, python-soappy, python-crypto, python-sqlite, m2crypto, debootstrap, openssl, sudo, adduser, sysstat, lsb-base, yum
 Recommends: dtc-xen-firewall, sysfsutils
 Suggests: xen-utils-common
 Description: SOAP daemon and scripts to allow control panel management for Xen VMs
@@ -24,10 +21,8 @@ Description: SOAP daemon and scripts to allow control panel management for Xen V
  hosting control panel.
 
 Package: dtc-xen-firewall
-Section: web
-Priority: optional
 Architecture: all
-Depends: debconf, iptables
+Depends: ${misc:Depends}, debconf, iptables
 Description: A small firewall script for your dom0
  If running in a production environment, you might want to have a basic
  firewall running on your dom0 to avoid having DoS attack. This is not the
