@@ -1,7 +1,0 @@
-#!/bin/sh
-
-set -e
-
-#DEBHELPER#
-
-exit 0
