@@ -84,7 +84,7 @@ apic=0
 .br
 vif = [ 'type=ioemu, mac=00:00:00:00:00:00, ip=1.2.3.4 1.2.3.5' ]
 .br
-disk=[ 'phy:/dev/mapper/lvm1-xen14,ioemu:hda,w','file:/var/lib/dtc-xen/ttyssh_home/xen14/boot.iso,hdb:cdrom,r','file:/var/lib/dtc-xen/ttyssh_home/xen14/cd2.iso,hdc:cdrom,r' ]
+disk=[ 'phy:/dev/mapper/lvm1-xen14,ioemu:hda,w', 'file:/var/lib/dtc-xen/ttyssh_home/xen14/boot.iso,hdb:cdrom,r', 'file:/var/lib/dtc-xen/ttyssh_home/xen14/cd2.iso,hdc:cdrom,r' ]
 .br
 cdrom="/var/lib/dtc-xen/ttyssh_home/xen14/boot.iso"
 .br
